aggiunto lo smooth movement quando clicco su un'ancora della navbar :lipstick:

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
   font-weight: 300;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 
 .site-navbar .nav-item:hover {
   background-color: rgba(0, 0, 0, 0.3) !important;
