--- a/css/animate.css
+++ b/css/animate.css
@@ -31,6 +31,16 @@ Copyright (c) 2015 Daniel Eden
   }
 }
 
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(500px) scale(.2);
+  }
+
+  100% {
+    transform: translateX(0px) scale(1);
+  }
+}
+
 @keyframes slideUp {
   0% {
     transform: translateY(300px);
@@ -51,14 +61,16 @@ Copyright (c) 2015 Daniel Eden
   }
 }
 
-h1 {
+h1,
+p,
+strong {
   animation-duration: .8s;
   animation-name: fadeInUp;
 }
 
-strong {
+.large-button {
   animation-duration: .8s;
-  animation-name: fadeInUp;
+  animation-name: slideInFromRight;
 }
 
 .site-navbar .nav-item {
