risolto bug delle icone :bug:

--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,6 @@ a:active {
 .site-service-item .icon {
   display: block;
   margin-bottom: 50px;
-  background: #edf0f2;
   background: rgb(212, 102, 212);
   width: 100px;
   height: 100px;
@@ -444,7 +443,9 @@ a:active {
 
 .site-service-item .icon span {
   font-size: 40px;
-  color: #080b0e;
+  size: 40px;
+
+  color: #080b0e !important;
   position: absolute;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
