--- a/src/Assets/styles/index.css
+++ b/src/Assets/styles/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+}
+
+@layer components{
+    
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,4 +22,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  transition: all 1s ease-in-out;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #121212 !important;
+  transition: all 1s ease-in-out;
+  border-radius: 20px;
+}
+
+.custom-scrollbar[data-theme="dark"]::-webkit-scrollbar-thumb {
+  background: #F0E9D8 !important;
+  transition: all 1s ease-in-out;
+  border-radius: 20px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent !important;
 }
